[METRICS] remove Optional from sensor